--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -11,7 +11,7 @@ html, body {
   margin: 0;
   padding: 0;
   color: #606060;
-  background-color: #f1f1fa;
+background: linear-gradient(70deg, #FBC02D, #00E6FF);
 }
 
 body {
